--- a/styles.css
+++ b/styles.css
@@ -362,7 +362,7 @@ body {}
   position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
+  height: 100vh;
   left: 0;
   background-color: #ebebea;
   padding: 1rem;
